Apply texts to colabs

--- a/colabs/NLP_no_transformer_inference.ipynb
+++ b/colabs/NLP_no_transformer_inference.ipynb
@@ -705,6 +705,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# NLP no-Transformer: Inference"
+      ],
+      "metadata": {
+        "id": "JxYfp7T4WsdF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install Wikidata\n",
@@ -717,7 +726,7 @@
         },
         "outputId": "801f128c-5cd3-4dbc-ecae-2d79ba4ae0a1"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,7 +807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "2BXVShMsA0-4"
       },
@@ -813,6 +822,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Setting seeds to try to make the training as much deterministic as possible.\n",
+        "This should help to compare results (for the instance accuracy of the validation test) of different trainings."
+      ],
+      "metadata": {
+        "id": "lVNhtixBXB6i"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "torch.manual_seed(42)\n",
@@ -822,8 +841,18 @@
       "metadata": {
         "id": "lEcH5MUeGVTR"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Wikipedia pages and Wikidata data need to be loaded from the web.\n",
+        "In order to speed up the training and the inference, we store (cache) the retrieved and the processed data in files."
+      ],
+      "metadata": {
+        "id": "HiF9zqMCXIpZ"
+      }
     },
     {
       "cell_type": "code",
@@ -846,8 +875,20 @@
       "metadata": {
         "id": "xCas4n7JePkX"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this section we build the singleton `NLPDataset`, that contains:\n",
+        "1. The original Hugging Face dataset\n",
+        "2. The Wikidata entities\n",
+        "3. The Wikipedia pages"
+      ],
+      "metadata": {
+        "id": "EoF91ED2XtJW"
+      }
     },
     {
       "cell_type": "code",
@@ -967,7 +1008,7 @@
       "metadata": {
         "id": "jaK4aqHbMhFs"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -982,7 +1023,7 @@
         },
         "outputId": "da978569-a8c3-4e3e-a74e-50edbd5e112c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -993,6 +1034,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If the dump files `training.bin` and `validation.bin` are present, the instance is build from the dump.\n",
+        "Without transformers we're going to process manually fields and texts.\n",
+        "In the following code:\n",
+        "1. dictionaries are created to produce frequency vectors\n",
+        "2. GloVe pretrained embeddings are applied to the descriptions\n",
+        "3. the labels are mapped to numbers\n",
+        "4. Category and subcategories are mapped to a single scalar value for each entity - pandas is used to group the ids of the subcategories by the category\n",
+        "\n",
+        "The result is a singleton `ProcessedDataset` that extends the base `NLPDataset`\n",
+        "providing also the `ProcessedEntity`s of the corresponding (base) `Entity`.\n",
+        "\n",
+        "Finally the result of the processing is dumped and can be reused to the next run\n"
+      ],
+      "metadata": {
+        "id": "deGmBQyhX0UP"
+      }
     },
     {
       "cell_type": "code",
@@ -1006,7 +1067,7 @@
         },
         "outputId": "68251562-6588-498d-efe4-bcaaeb38ba63"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1137,7 +1198,7 @@
       "metadata": {
         "id": "eR3AbdkjxJRW"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1430,7 +1491,7 @@
       "metadata": {
         "id": "cLFV7M3iwrKf"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1445,7 +1506,7 @@
         },
         "outputId": "dda384f0-8bad-4738-fdd9-705e596af352"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1688,8 +1749,18 @@
       "metadata": {
         "id": "dKeySnraTKD3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We arrived at the very heart of the No-Trasformer solution: the model!\n",
+        "We want to use all the data source from the dataset, the WikiData and WikiPedia pages. Since those guys have a very different original dimentions we the code idea is to scale them in a pre training layer before to produce the combined vector that is passed in input the classifier (a FF network)."
+      ],
+      "metadata": {
+        "id": "p3yEmz_zZr0c"
+      }
     },
     {
       "cell_type": "code",
@@ -1745,8 +1816,17 @@
       "metadata": {
         "id": "ZRIukpPuTOAF"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finally, the inference code. The output is also stored in a csv file: `transformer-inference.csv`. So that this can be inspected later."
+      ],
+      "metadata": {
+        "id": "Q_WYVfZ-e1hl"
+      }
     },
     {
       "cell_type": "code",
@@ -1812,7 +1892,7 @@
         },
         "outputId": "e9341930-f3dc-4757-9fa3-fa364dbd555d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
