--- a/colabs/NLP_yes_transformer_inference.ipynb
+++ b/colabs/NLP_yes_transformer_inference.ipynb
@@ -17,6 +17,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# NLP Transformer: Inference"
+      ],
+      "metadata": {
+        "id": "JNPyhPqqQmv-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install Wikidata\n",
@@ -30,7 +39,7 @@
         },
         "outputId": "bf356e0e-b686-4539-daa9-81bfcaffbaef"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +131,7 @@
       "metadata": {
         "id": "NPYS__k7tU3Q"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -133,12 +142,22 @@
       "metadata": {
         "id": "JPOI_M3umGch"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Setting seeds to try to make the training as much deterministic as possible.\n",
+        "This should help to compare results (for the instance accuracy of the validation test) of different trainings."
+      ],
+      "metadata": {
+        "id": "vQoa3pVfRZ_-"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "THzb1CV7ggEv"
       },
@@ -157,8 +176,18 @@
       "metadata": {
         "id": "c7HjzdTlmJZ-"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Wikipedia pages and Wikidata data need to be loaded from the web.\n",
+        "In order to speed up the training and the inference, we store (cache) the retrieved and the processed data in files."
+      ],
+      "metadata": {
+        "id": "UOP1h3JWRe4P"
+      }
     },
     {
       "cell_type": "code",
@@ -181,8 +210,20 @@
       "metadata": {
         "id": "xCas4n7JePkX"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this section we build the singleton `NLPDataset`, that contains:\n",
+        "1. The original Hugging Face dataset\n",
+        "2. The Wikidata entities\n",
+        "3. The Wikipedia pages"
+      ],
+      "metadata": {
+        "id": "YoUeopjcRkpx"
+      }
     },
     {
       "cell_type": "code",
@@ -302,7 +343,7 @@
       "metadata": {
         "id": "MnMKuBqNkBYn"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,7 +359,7 @@
         "id": "4hKm7wWbmwt1",
         "outputId": "c2588ed1-e969-465e-994c-95f69d9437bb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,6 +372,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "If the dump files `training.bin` and `validation.bin` are present, the instance is build from the dump.\n",
+        "And this is all we need to use the transformer. That is, usually with transformers we don't need to process the data."
+      ],
+      "metadata": {
+        "id": "Cmm1ekIxRrlM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import csv\n",
@@ -339,8 +390,17 @@
       "metadata": {
         "id": "pUREAurO-f48"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this case we will keep the description and the Wikipedia page text as they are, leaving the burden of taking text processing decisions to the tokenizer. The dataset here is enriched with the Wikipedia text and the labels are mapped to numbers:"
+      ],
+      "metadata": {
+        "id": "cCV8K37DR3mV"
+      }
     },
     {
       "cell_type": "code",
@@ -387,8 +447,20 @@
       "metadata": {
         "id": "6OETfZRXAlIo"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this colab we reuse the result produced by the other colab: `NLP_yes_transformer_training.ipynb`. The model is used to predict the label of the validation set.\n",
+        "\n",
+        "Note: in the `predict_text` method there is a redundancy, we predict the labels using both the `input_ids` and the `attention_mask` tokenized on the fly and the ones that are created by the tokenization process of the dataset.\n",
+        "We want to show the obvious: both should produce the same output."
+      ],
+      "metadata": {
+        "id": "AEkIeczedhTP"
+      }
     },
     {
       "cell_type": "code",
@@ -419,8 +491,17 @@
       "metadata": {
         "id": "JJ6X4DZuBmw8"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finally, the inference code. The output is also stored in a csv file: `transformer-inference.csv`. So that this can be inspected later."
+      ],
+      "metadata": {
+        "id": "Q_WYVfZ-e1hl"
+      }
     },
     {
       "cell_type": "code",
@@ -473,7 +554,7 @@
         "id": "QFNn9hz-CEjC",
         "outputId": "4f0239d8-fdc1-486b-b11a-f5a76f1941d0"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
