Update notebooks to use drive
Also upload the LaTeX by Nicolò

--- a/colabs/NLP_yes_transformer_training.ipynb
+++ b/colabs/NLP_yes_transformer_training.ipynb
@@ -782,7 +782,8 @@
     "from wikidata.client import Client\n",
     "from datasets import load_dataset\n",
     "from itertools import islice\n",
-    "from google.colab import userdata"
+    "from google.colab import userdata\n",
+    "from google.colab import drive"
    ]
   },
   {
@@ -843,20 +844,29 @@
   {
    "cell_type": "code",
    "source": [
+    "drive.mount('/content/drive')\n",
+    "BASE_PATH = '/content/drive/MyDrive/Lost_in_Language_Recognition/'\n",
+    "\n",
     "def dump(file_name, result):\n",
+    "    file_path = BASE_PATH + file_name\n",
     "    # remove dump files if present\n",
-    "    if os.path.exists(file_name):\n",
-    "        os.remove(file_name)\n",
-    "    with open(file_name, 'wb') as file:\n",
-    "        print(\"dumping\", file_name)\n",
+    "    if os.path.exists(file_path):\n",
+    "        os.remove(file_path)\n",
+    "    with open(file_path, 'wb') as file:\n",
+    "        print(\"dumping\", file_path)\n",
     "        # noinspection PyTypeChecker\n",
     "        pickle.dump(result, file)\n",
     "\n",
     "def load(file_name):\n",
-    "    with open(file_name, 'rb') as file:\n",
-    "        print(\"loading\", file_name)\n",
+    "    file_path = BASE_PATH + file_name\n",
+    "    with open(file_path, 'rb') as file:\n",
+    "        print(\"loading\", file_path)\n",
     "        # noinspection PyTypeChecker\n",
-    "        return pickle.load(file)"
+    "        return pickle.load(file)\n",
+    "\n",
+    "def file_exists(file_name):\n",
+    "    file_path = BASE_PATH + file_name\n",
+    "    return os.path.exists(file_path)"
    ],
    "metadata": {
     "id": "xCas4n7JePkX"
@@ -973,7 +983,7 @@
     "\n",
     "class NLPDataset:\n",
     "    def __init__(self, training_limit=None, validation_limit=None, force_reload=False):\n",
-    "        if not (os.path.exists(TRAINING_FILE_NAME)) or not (os.path.exists(VALIDATION_FILE_NAME)) or force_reload:\n",
+    "        if not (file_exists(TRAINING_FILE_NAME)) or not (file_exists(VALIDATION_FILE_NAME)) or force_reload:\n",
     "            # load the project dataset\n",
     "            dataset = load_dataset('sapienzanlp/nlp2025_hw1_cultural_dataset', token=userdata.get('HF_TOKEN'))\n",
     "            # a factory object is used to create our entities\n",
