--- a/colabs/NLP_no_transformer_inference.ipynb
+++ b/colabs/NLP_no_transformer_inference.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -12,8 +11,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -36,7 +34,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "885a6630-7e17-43d8-8c28-78e74bfd89b2"
+        "outputId": "90158d92-1d99-4740-dce3-b0de97735e79"
       },
       "execution_count": 1,
       "outputs": [
@@ -46,8 +44,8 @@
           "text": [
             "Requirement already satisfied: Wikidata in /usr/local/lib/python3.11/dist-packages (0.8.1)\n",
             "Requirement already satisfied: datasets in /usr/local/lib/python3.11/dist-packages (3.5.1)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from datasets) (3.17.0)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.11/dist-packages (from datasets) (1.26.4)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from datasets) (3.18.0)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.11/dist-packages (from datasets) (2.0.2)\n",
             "Requirement already satisfied: pyarrow>=15.0.0 in /usr/local/lib/python3.11/dist-packages (from datasets) (18.1.0)\n",
             "Requirement already satisfied: dill<0.3.9,>=0.3.0 in /usr/local/lib/python3.11/dist-packages (from datasets) (0.3.8)\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (from datasets) (2.2.2)\n",
@@ -55,26 +53,26 @@
             "Requirement already satisfied: tqdm>=4.66.3 in /usr/local/lib/python3.11/dist-packages (from datasets) (4.67.1)\n",
             "Requirement already satisfied: xxhash in /usr/local/lib/python3.11/dist-packages (from datasets) (3.5.0)\n",
             "Requirement already satisfied: multiprocess<0.70.17 in /usr/local/lib/python3.11/dist-packages (from datasets) (0.70.16)\n",
-            "Requirement already satisfied: fsspec<=2025.3.0,>=2023.1.0 in /usr/local/lib/python3.11/dist-packages (from fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (2024.10.0)\n",
-            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.11/dist-packages (from datasets) (3.11.13)\n",
-            "Requirement already satisfied: huggingface-hub>=0.24.0 in /usr/local/lib/python3.11/dist-packages (from datasets) (0.28.1)\n",
+            "Requirement already satisfied: fsspec<=2025.3.0,>=2023.1.0 in /usr/local/lib/python3.11/dist-packages (from fsspec[http]<=2025.3.0,>=2023.1.0->datasets) (2025.3.0)\n",
+            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.11/dist-packages (from datasets) (3.11.15)\n",
+            "Requirement already satisfied: huggingface-hub>=0.24.0 in /usr/local/lib/python3.11/dist-packages (from datasets) (0.30.2)\n",
             "Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from datasets) (24.2)\n",
             "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.11/dist-packages (from datasets) (6.0.2)\n",
-            "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (2.4.6)\n",
+            "Requirement already satisfied: aiohappyeyeballs>=2.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (2.6.1)\n",
             "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (1.3.2)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (25.1.0)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (1.5.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (6.1.0)\n",
-            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (0.3.0)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (1.18.3)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub>=0.24.0->datasets) (4.12.2)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (25.3.0)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (1.6.0)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (6.4.3)\n",
+            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (0.3.1)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.11/dist-packages (from aiohttp->datasets) (1.20.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.11/dist-packages (from huggingface-hub>=0.24.0->datasets) (4.13.2)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (3.4.1)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (2.3.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (2025.1.31)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2025.1)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2025.1)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (2.4.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests>=2.32.2->datasets) (2025.4.26)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->datasets) (2025.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas->datasets) (1.17.0)\n"
           ]
         }
@@ -162,7 +160,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d2763f95-c0c5-4f46-905d-1c281ccf8b56"
+        "outputId": "c2fb62b9-2c95-4b12-ff96-c832ed102c1e"
       },
       "execution_count": 4,
       "outputs": [
@@ -333,7 +331,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "26300a16-24b1-4d89-f438-cce18c5d0f5f"
+        "outputId": "7c0512c2-52b8-4cd0-e735-b75cc729d165"
       },
       "execution_count": 6,
       "outputs": [
@@ -378,7 +376,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3d8312fc-73e5-482e-9575-998fefb83f15"
+        "outputId": "e99ccd0a-7c6e-4270-b35d-a8b6fd72ed68"
       },
       "execution_count": 7,
       "outputs": [
@@ -389,19 +387,19 @@
             "Requirement already satisfied: torchtext==0.6.0 in /usr/local/lib/python3.11/dist-packages (0.6.0)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.11/dist-packages (from torchtext==0.6.0) (4.67.1)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from torchtext==0.6.0) (2.32.3)\n",
-            "Requirement already satisfied: torch in /usr/local/lib/python3.11/dist-packages (from torchtext==0.6.0) (2.5.1+cu124)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from torchtext==0.6.0) (1.26.4)\n",
+            "Requirement already satisfied: torch in /usr/local/lib/python3.11/dist-packages (from torchtext==0.6.0) (2.6.0+cu124)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from torchtext==0.6.0) (2.0.2)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.11/dist-packages (from torchtext==0.6.0) (1.17.0)\n",
             "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.11/dist-packages (from torchtext==0.6.0) (0.2.0)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->torchtext==0.6.0) (3.4.1)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/dist-packages (from requests->torchtext==0.6.0) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->torchtext==0.6.0) (2.3.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->torchtext==0.6.0) (2025.1.31)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (3.17.0)\n",
-            "Requirement already satisfied: typing-extensions>=4.8.0 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (4.12.2)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->torchtext==0.6.0) (2.4.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->torchtext==0.6.0) (2025.4.26)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (3.18.0)\n",
+            "Requirement already satisfied: typing-extensions>=4.10.0 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (4.13.2)\n",
             "Requirement already satisfied: networkx in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (3.4.2)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (3.1.5)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (2024.10.0)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (3.1.6)\n",
+            "Requirement already satisfied: fsspec in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (2025.3.0)\n",
             "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (12.4.127)\n",
             "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (12.4.127)\n",
             "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (12.4.127)\n",
@@ -411,10 +409,11 @@
             "Requirement already satisfied: nvidia-curand-cu12==10.3.5.147 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (10.3.5.147)\n",
             "Requirement already satisfied: nvidia-cusolver-cu12==11.6.1.9 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (11.6.1.9)\n",
             "Requirement already satisfied: nvidia-cusparse-cu12==12.3.1.170 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (12.3.1.170)\n",
+            "Requirement already satisfied: nvidia-cusparselt-cu12==0.6.2 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (0.6.2)\n",
             "Requirement already satisfied: nvidia-nccl-cu12==2.21.5 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (2.21.5)\n",
             "Requirement already satisfied: nvidia-nvtx-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (12.4.127)\n",
             "Requirement already satisfied: nvidia-nvjitlink-cu12==12.4.127 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (12.4.127)\n",
-            "Requirement already satisfied: triton==3.1.0 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (3.1.0)\n",
+            "Requirement already satisfied: triton==3.2.0 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (3.2.0)\n",
             "Requirement already satisfied: sympy==1.13.1 in /usr/local/lib/python3.11/dist-packages (from torch->torchtext==0.6.0) (1.13.1)\n",
             "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.11/dist-packages (from sympy==1.13.1->torch->torchtext==0.6.0) (1.3.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.11/dist-packages (from jinja2->torch->torchtext==0.6.0) (3.0.2)\n"
@@ -759,7 +758,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7d8df7b0-f4b9-4d2d-8e32-a48ad70c8758"
+        "outputId": "c7473bca-5d9d-4717-8b09-7bb896ac2b96"
       },
       "execution_count": 10,
       "outputs": [
@@ -813,29 +812,42 @@
         "                      repo_url=\"fax4ever/culturalitems-no-transformer\",\n",
         "                      pipeline_tag=\"text-classification\",\n",
         "                      license=\"apache-2.0\"):\n",
-        "    def __init__(self, params, device) -> None:\n",
+        "    def __init__(self, params):\n",
         "        super(MultiModalModel, self).__init__()\n",
-        "        self.device = device\n",
         "        # individual input layers for frequency vectors\n",
-        "        self.desc = rescale_vector_layer(params['desc']).to(device)\n",
-        "        self.wiki = rescale_vector_layer(params['wiki']).to(device)\n",
-        "        self.labels = rescale_vector_layer(params['labels']).to(device)\n",
-        "        self.descriptions = rescale_vector_layer(params['descriptions']).to(device)\n",
-        "        self.aliases = rescale_vector_layer(params['aliases']).to(device)\n",
-        "        self.pages = rescale_vector_layer(params['pages']).to(device)\n",
-        "        self.claims = rescale_vector_layer(params['claims']).to(device)\n",
+        "        self.desc = rescale_vector_layer(params['desc'])\n",
+        "        self.wiki = rescale_vector_layer(params['wiki'])\n",
+        "        self.labels = rescale_vector_layer(params['labels'])\n",
+        "        self.descriptions = rescale_vector_layer(params['descriptions'])\n",
+        "        self.aliases = rescale_vector_layer(params['aliases'])\n",
+        "        self.pages = rescale_vector_layer(params['pages'])\n",
+        "        self.claims = rescale_vector_layer(params['claims'])\n",
         "        # individual input layers for scalar value\n",
-        "        self.category = nn.Linear(params['category_dim'], params['category_scale']).to(device)\n",
-        "        self.type_proj = nn.Linear(params['type_dim'], params['type_scale']).to(device)\n",
+        "        self.category = nn.Linear(params['category_dim'], params['category_scale'])\n",
+        "        self.type_proj = nn.Linear(params['type_dim'], params['type_scale'])\n",
         "        # glove\n",
-        "        self.desc_glove = rescale_vector_layer(params['desc_glove']).to(device)\n",
+        "        self.desc_glove = rescale_vector_layer(params['desc_glove'])\n",
         "        # common classifier\n",
         "        self.classifier = nn.Sequential(\n",
         "            nn.Linear(params['total_scale'], params['hidden_layers']),\n",
         "            nn.ReLU(),\n",
         "            nn.Dropout(params['dropout']),\n",
         "            nn.Linear(params['hidden_layers'], 3)\n",
-        "        ).to(device)\n",
+        "        )\n",
+        "\n",
+        "    def to_device(self, device):\n",
+        "        self.device = device\n",
+        "        self.desc = self.desc.to(device)\n",
+        "        self.wiki = self.wiki.to(device)\n",
+        "        self.labels = self.labels.to(device)\n",
+        "        self.descriptions = self.descriptions.to(device)\n",
+        "        self.aliases = self.aliases.to(device)\n",
+        "        self.pages = self.pages.to(device)\n",
+        "        self.claims = self.claims.to(device)\n",
+        "        self.category = self.category.to(device)\n",
+        "        self.type_proj = self.type_proj.to(device)\n",
+        "        self.desc_glove = self.desc_glove.to(device)\n",
+        "        self.classifier = self.classifier.to(device)\n",
         "\n",
         "    def forward(self, dataset_items):\n",
         "        desc_feat = self.desc(dataset_items['desc'].to(self.device))\n",
@@ -879,8 +891,11 @@
         "        return 'cultural exclusive'\n",
         "    raise ValueError('label not suppoerted: ' + label)\n",
         "\n",
-        "model = MultiModalModel.from_pretrained(\"fax4ever/culturalitems-no-transformer\", token=userdata.get('HF_TOKEN'))\n",
-        "\n",
+        "model = MultiModalModel.from_pretrained(\"fax4ever/culturalitems-no-transformer\")\n",
+        "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+        "print(\"using device:\", device)\n",
+        "model.to_device(device)\n",
+        "model.eval()\n",
         "matching = 0\n",
         "with torch.no_grad():\n",
         "    validation = processed_dataset.validation()\n",
@@ -907,14 +922,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8c230c2c-ff73-4e92-a627-1c473614853e"
+        "outputId": "484b770b-44ff-43a7-e4d4-a70d282f48dd"
       },
-      "execution_count": 19,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "using device: cpu\n",
             "matched 226 on 300 ( 0.7533333333333333 )\n"
           ]
         }
