--- a/latex/nlp-homework-1.tex
+++ b/latex/nlp-homework-1.tex
@@ -158,12 +158,7 @@ Regina Giovanni \\
 		\label{table:3}
 	\end{table}
 	
-	In the table \ref{table:3} we present the base encoder models we tried for the LM-based classifier.  We choose RoBERTa-base comparing the trade-off of performance and results (again the accuracy of the validation set).
-	
-	\section{Algorithms  Appendix}
-	\label{sec:appendix}
-	
-	
+	Table \ref{table:3} lists the base encoder models we tested for the LM-based classifier. We selected RoBERTa-base based on a trade-off between performance and validation set accuracy. For instance, some models—such as BigBird—are too large to run efficiently on standard machines with typical GPUs.
 
 \end{document}
 
